# Story-OS

./: .gitignore  FRONTEND_REDESIGN_BASELINE.md  FRONTEND_REDESIGN_REPORT.md  README.md  main.py  pyproject.toml  requirements.txt
docs/design/: deepseek_conservative_readiness_contract.md
docs/planning/: PHASE_0D3C4_B0.md  PHASE_0D3C4_B0_DELIVERY_REPORT.md  PHASE_0D3C4_B_INTEGRATION_BRIEF.md
docs/security/: deepseek_conservative_budget_risk_matrix.md  deepseek_conservative_token_budget_policy.md
story-os-demo/: .env.example  AGENTS.md  PHASE_14_0_PLANNING_AUDIT.md  PROJECT_ROADMAP.md  README.md  commands.py  config.py  main.py  requirements.txt  storyos_launcher.py
story-os-demo/.story_os/: config.json
story-os-demo/agents/: __init__.py  base_agent.py  evaluation.py  executor.py  memory_scope.py  models.py  registry.py  workflow.py
story-os-demo/analytics/: __init__.py  audience_analyzer.py  chapter_analyzer.py  genre_analyzer.py  market_analyzer.py  models.py  recommendation.py  report_generator.py  retention_predictor.py  service.py  story_metrics.py  trend_engine.py
story-os-demo/author_memory/: __init__.py  asset_store.py  author_profile.py  experience_manager.py  knowledge_retriever.py  models.py  preference_engine.py  recommendation.py  style_analyzer.py
story-os-demo/core/: blueprint_generator.py  chapter_committer.py  character_builder.py  draft_editor.py  draft_editor_refine.py  draft_writer.py  errors.py  llm_api_model.py  llm_ollama_cloud.py  next_chapter_planner.py  project.py  project_context.py  setup_wizard.py  world_builder.py
(+317 files in other folders)
